# Redrop

./: .gitattributes  .gitignore  README.md  candidate_schema.json  output.txt  output_spec.txt  ranker.py  read_docx.py  submission.yaml
output/: submission.csv
redrob_ranker/: .dockerignore  .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
redrob_ranker/artifacts/: candidate_embeddings.npy  jd_embedding.npy
redrob_ranker/config/: dictionaries.yaml  templates.yaml  weights.yaml
redrob_ranker/data/: Job Description.md
redrob_ranker/models/cross-encoder-ms-marco-MiniLM-L6-v2/: README.md
redrob_ranker/output/: submission.csv
redrob_ranker/scripts/: download_cross_encoder.py  precompute_embeddings.py  precompute_jd_embedding.py
redrob_ranker/src/: main.py
redrob_ranker/src/core/: behavior_engine.py  cross_encoder_rerank.py  embeddings.py  extractor.py  normalizer.py  ranker.py  reasoning.py  risk_engine.py  scorer.py  semantic_index.py  validator.py
redrob_ranker/src/models/: candidate.py  trace.py
redrob_ranker/src/output/: submission.csv
reference_docs/: job_description.docx  read_docx.py  redrob_signals_doc.docx  submission_spec.docx
