[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redrob-ranker"
version = "1.0.0"
description = "Redrop Two-Stage Offline CPU Candidate Evaluation & Ranking Engine"
readme = "README.md"
requires-python = ">=3.11, <3.14"
license = { text = "MIT" }
authors = [
    { name = "Team Quad_Core" },
    { name = "Kavin C", email = "727724eucy042@skcet.ac.in" }
]
keywords = [
    "candidate-ranking",
    "recruitment-ai",
    "sentence-transformers",
    "cross-encoder",
    "all-MiniLM-L6-v2",
    "ms-marco-MiniLM-L6-v2",
    "bm25",
    "offline-nlp"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "PyYAML==6.0.1",
    "pydantic==2.5.3",
    "sentence-transformers==5.6.0",
    "python-dotenv==1.0.1",
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
]

[project.scripts]
redrob-ranker = "src.main:main"

[project.urls]
Repository = "https://github.com/NOT-BAD-YAR/Redrop.git"
Sandbox = "https://hub.docker.com/r/notbad007/redrob-ranker"

[tool.setuptools]
packages = ["src", "src.core", "src.models"]

[tool.redrob.models]
bi_encoder = "models/all-MiniLM-L6-v2"
cross_encoder = "models/cross-encoder-ms-marco-MiniLM-L6-v2"
embedding_dimension = 384
